war/src/main/webapp/engines/jahia-anthracite/_edit_contribute.scss
/* ... */
// Language Switcher
.toolbar-itemsgroup-languageswitcher {
    position: fixed;
    right: 20px;
    left: auto !important;
    top: 17px !important;

    transition: background 0.3s ease-in 0s;

    pointer-events: all;
    z-index: $ZINDEX--MAINMODULE--LANGUAGE_SWITCHER;

	body[data-sitesettings="true"] .x-viewport-editmode & {
		right: auto!important;
		left: 72px!important;
		top: 104px!important;
	}

}


.app-container {
    height: 100%;

    > .x-panel-bwrap {
        height: 100%;

    }

    .toolbar-header {
    	border: none;
    	background: transparent;
    	margin: 0;

        /* Container */
		z-index: $ZINDEX--MAINMODULE--HEADER;
		right: 69px;
		position: fixed !important;
		overflow: visible;
		text-align: center;
		left: 60px;
		width: calc(100% - 124px) !important;
		top: 0 !important;
		padding: 0;
		height: 51px!important;

		body[data-sitesettings="true"] & {
			visibility: hidden;
		}

    }

    // Header bar
    .x-panel-tbar {
        height: 53px;
        pointer-events: none;
    }


}

.action-bar-container {
    // .action-bar-container
    z-index: $ZINDEX--ACTION_BAR--CONTAINER;
    height: 60px;
    display: block;
    position: absolute !important;
}

.window-container {
    overflow: visible;
	background: transparent;

    height: calc(100% - 56px) !important;
    width: calc(100% - 69px) !important;

    .x-viewport-contributemode & {
        width: 100%!important;
    }


}

.mainmodule {
    height: 100% !important;
	background: transparent !important;
	position: absolute;
	left: 0 !important;
	z-index: $ZINDEX--MAINMODULE;
	width: calc(100% - 0px) !important;

    // Iframe containers
    > div:nth-child(2) {
        // iframe outer container
        top: 0px !important;
        height: calc(100% - 9px) !important;
        width: calc(100% - 55px) !important;
        left: 60px !important;
        z-index: $ZINDEX--IFRAME--CONTAINER;
        overflow: visible !important;

        &.channel-zoom {
            // overflow: scroll!important;
        }

        .x-viewport-contributemode & {
            left: 0!important;
            width: 100%!important;
        }

        body[data-indigo-infoBar="true"] & {
            height: calc(100% - 50px)!important;
        }

        > div:not(.x-abs-layout-container) {
            // iframe inner container
            width: 100% !important;
            height: calc(100% + 4px) !important;
            transform: none!important;
            transform-origin: unset!important;
            overflow: visible!important;
        }

        body[data-INDIGO-SIDEPANEL-PINNED="true"] & {
			left: 410px !important;
		    width: calc(100% - 405px) !important;
		}

        // body[data-INDIGO-SIDEPANEL-PINNED="true"] &,
        // body[data-channel][data-indigo-gwt-side-panel="open"] & {
		// 	left: 410px !important;
		//     width: calc(100% - 405px) !important;
		// }
    }

    // Iframe
    .window-iframe {
        width: 100% !important;
        box-shadow: 0 5px 10px 1px rgba(49, 49, 49, 0.5)!important;
        margin-top: 8px !important;

        body[data-edit-window-style="settings"] &,
		.x-viewport-adminmode &,
		.x-viewport-dashboardmode & {
            margin-top: 0px !important;

        }

        .x-viewport-contributemode & {
            box-shadow: _property($CONTRIBUTE--BG--SHADOW, $CONTRIBUTE);
        }
    }
}



// Contribute menu buttons

// Edit button
%CSS_BLOCK--CONTRIBUTE--EDIT--BUTTON {
    width: 20px;
    height: 20px;
    background: url($ICON--INFO--WHITE) no-repeat center center;
    background-size: 23px 23px;

    top: 21px;

    position: fixed;

    td {
        display: none;
    }
}


// New Page
%CSS_BLOCK--CONTRIBUTE--NEWPAGE--BUTTON {
    background: url($ICON--ADD--WHITE) no-repeat top 3px left;
    background-size: 21px;
    padding-left: 20px;
    margin-left: 10px;
    margin-top: 4px;

    > tbody {
        display: none;
    }

    &::after {
        content: $text_create_page;
        line-height: 29px;
        font-size: 11px;
        opacity: 1;
    }
}

%CSS_BLOCK--CONTRIBUTE--MODE_SWITCH---SELECTED {
    background: _property($SWITCH--BG--ON, $APP);
    color:_property($SWITCH--COLOR--ON, $APP)!important;
    border-radius: 3px;
    box-shadow: _property($SWITCH--SHADOW--ON, $APP);
    padding: 5px 10px;
    font-weight: 600;
}

.toolbar-item-sitehome,
.toolbar-item-sitecontent,
.toolbar-item-sitefiels {
    background: _property($SWITCH--RAIL, $APP);
    padding: 2px 0px;
    margin-top: 3px;
	opacity: 1!important;

    &:hover {
        &::after {
			color: _property($SWITCH--COLOR--OFF---HOVER, $APP)!important;
        }
    }

    &::after {
        padding: 5px;
        box-sizing: border-box;
        font-size: 11px!important;
        opacity: 1!important;
        color: _property($SWITCH--COLOR--OFF, $APP)!important;


    }

    > tbody {
        display: none;
    }
}

// Home page
.toolbar-item-sitehome {
    margin-left: 60px;
    border-radius: 3px 0 0 3px;

    &::after {
        content: $text_site;

        padding-left: 10px;

        body[data-contribute-mode="site"] & {
            @extend %CSS_BLOCK--CONTRIBUTE--MODE_SWITCH---SELECTED;
        }
    }


}

// Content
.toolbar-item-sitecontent {

    &::after {
        content: $text_content;

        body[data-contribute-mode="content"] & {
            @extend %CSS_BLOCK--CONTRIBUTE--MODE_SWITCH---SELECTED;
        }
    }


}

// Files and images
.toolbar-item-sitefiels {
    border-radius: 0 3px 3px 0;

    &::after {
        content: $text_files;

        padding-right: 10px;

        body[data-contribute-mode="files"] & {
            @extend %CSS_BLOCK--CONTRIBUTE--MODE_SWITCH---SELECTED;
        }
    }


}
/* ... */

